jdk 1.3 compatibility...